// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AudioPlayerView > renders the audio player in default state 1`] = `
<div>
  <div
    aria-label="Audio player"
    class="mx_MediaBody MediaBody-module_mediaBody AudioPlayerView-module_audioPlayer"
    role="region"
    tabindex="0"
  >
    <div
      class="Flex-module_flex"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <button
        aria-disabled="false"
        aria-label="Play"
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 PlayPauseButton-module_button"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="-1"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743"
            />
          </svg>
        </div>
      </button>
      <div
        class="Flex-module_flex AudioPlayerView-module_mediaInfo"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <span
          class="AudioPlayerView-module_mediaName"
          data-testid="audio-player-name"
        >
          Sample Audio
        </span>
        <div
          class="Flex-module_flex AudioPlayerView-module_byline"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1-5x); --mx-flex-wrap: nowrap;"
        >
          <time
            class="mx_Clock"
            datetime="PT5M"
          >
            05:00
          </time>
          (3.42 KB)
        </div>
      </div>
    </div>
    <div
      class="Flex-module_flex"
      data-testid="audio-player-seek"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        aria-label="Audio seek bar"
        class="SeekBar-module_seekBar"
        max="100"
        min="0"
        step="1"
        style="--fillTo: 0.3;"
        tabindex="-1"
        type="range"
        value="30"
      />
      <time
        class="mx_Clock AudioPlayerView-module_clock"
        datetime="PT2M"
        role="timer"
      >
        02:00
      </time>
      <div
        class="VolumeSlider-module_volumeSlider"
      >
        <svg
          aria-hidden="true"
          class="VolumeSlider-module_icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10a2 2 0 0 1 2-2h2l3.293-3.293c.63-.63 1.707-.184 1.707.707v13.172c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2zm4.828 4L10 16.172V7.828L7.828 10H5v4zm6.294-5.536a1 1 0 0 1 1.414 0A5 5 0 0 1 17 12c0 1.38-.56 2.632-1.464 3.535a1 1 0 1 1-1.415-1.414 3 3 0 0 0 .88-2.121c0-.829-.335-1.578-.88-2.122a1 1 0 0 1 0-1.414"
          />
          <path
            d="M18.364 5.636A1 1 0 1 0 16.95 7.05 6.98 6.98 0 0 1 19 12a6.98 6.98 0 0 1-2.05 4.95 1 1 0 0 0 1.414 1.414A8.98 8.98 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364"
          />
        </svg>
        <input
          aria-label="Volume"
          aria-valuetext="80%"
          class="SeekBar-module_seekBar VolumeSlider-module_slider"
          max="100"
          min="0"
          step="1"
          style="--fillTo: 0.8;"
          type="range"
          value="80"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayerView > renders the audio player in error state 1`] = `
<div>
  <div
    aria-label="Audio player"
    class="mx_MediaBody MediaBody-module_mediaBody AudioPlayerView-module_audioPlayer"
    role="region"
    tabindex="0"
  >
    <div
      class="Flex-module_flex"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <button
        aria-disabled="false"
        aria-label="Play"
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 PlayPauseButton-module_button"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="-1"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743"
            />
          </svg>
        </div>
      </button>
      <div
        class="Flex-module_flex AudioPlayerView-module_mediaInfo"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <span
          class="AudioPlayerView-module_mediaName"
          data-testid="audio-player-name"
        >
          Sample Audio
        </span>
        <div
          class="Flex-module_flex AudioPlayerView-module_byline"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1-5x); --mx-flex-wrap: nowrap;"
        >
          <time
            class="mx_Clock"
            datetime="PT5M"
          >
            05:00
          </time>
          (3.42 KB)
        </div>
      </div>
    </div>
    <div
      class="Flex-module_flex"
      data-testid="audio-player-seek"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        aria-label="Audio seek bar"
        class="SeekBar-module_seekBar"
        max="100"
        min="0"
        step="1"
        style="--fillTo: 0.3;"
        tabindex="-1"
        type="range"
        value="30"
      />
      <time
        class="mx_Clock AudioPlayerView-module_clock"
        datetime="PT2M"
        role="timer"
      >
        02:00
      </time>
      <div
        class="VolumeSlider-module_volumeSlider"
      >
        <svg
          aria-hidden="true"
          class="VolumeSlider-module_icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10a2 2 0 0 1 2-2h2l3.293-3.293c.63-.63 1.707-.184 1.707.707v13.172c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2zm4.828 4L10 16.172V7.828L7.828 10H5v4zm6.294-5.536a1 1 0 0 1 1.414 0A5 5 0 0 1 17 12c0 1.38-.56 2.632-1.464 3.535a1 1 0 1 1-1.415-1.414 3 3 0 0 0 .88-2.121c0-.829-.335-1.578-.88-2.122a1 1 0 0 1 0-1.414"
          />
          <path
            d="M18.364 5.636A1 1 0 1 0 16.95 7.05 6.98 6.98 0 0 1 19 12a6.98 6.98 0 0 1-2.05 4.95 1 1 0 0 0 1.414 1.414A8.98 8.98 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364"
          />
        </svg>
        <input
          aria-label="Volume"
          aria-valuetext="80%"
          class="SeekBar-module_seekBar VolumeSlider-module_slider"
          max="100"
          min="0"
          step="1"
          style="--fillTo: 0.8;"
          type="range"
          value="80"
        />
      </div>
    </div>
  </div>
  <span
    class="AudioPlayerView-module_error"
  >
    Error downloading audio
  </span>
</div>
`;

exports[`AudioPlayerView > renders the audio player without media name 1`] = `
<div>
  <div
    aria-label="Audio player"
    class="mx_MediaBody MediaBody-module_mediaBody AudioPlayerView-module_audioPlayer"
    role="region"
    tabindex="0"
  >
    <div
      class="Flex-module_flex"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <button
        aria-disabled="false"
        aria-label="Play"
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 PlayPauseButton-module_button"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="-1"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743"
            />
          </svg>
        </div>
      </button>
      <div
        class="Flex-module_flex AudioPlayerView-module_mediaInfo"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <span
          class="AudioPlayerView-module_mediaName"
          data-testid="audio-player-name"
        >
          Unnamed audio
        </span>
        <div
          class="Flex-module_flex AudioPlayerView-module_byline"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1-5x); --mx-flex-wrap: nowrap;"
        >
          <time
            class="mx_Clock"
            datetime="PT5M"
          >
            05:00
          </time>
          (3.42 KB)
        </div>
      </div>
    </div>
    <div
      class="Flex-module_flex"
      data-testid="audio-player-seek"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        aria-label="Audio seek bar"
        class="SeekBar-module_seekBar"
        max="100"
        min="0"
        step="1"
        style="--fillTo: 0.3;"
        tabindex="-1"
        type="range"
        value="30"
      />
      <time
        class="mx_Clock AudioPlayerView-module_clock"
        datetime="PT2M"
        role="timer"
      >
        02:00
      </time>
      <div
        class="VolumeSlider-module_volumeSlider"
      >
        <svg
          aria-hidden="true"
          class="VolumeSlider-module_icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10a2 2 0 0 1 2-2h2l3.293-3.293c.63-.63 1.707-.184 1.707.707v13.172c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2zm4.828 4L10 16.172V7.828L7.828 10H5v4zm6.294-5.536a1 1 0 0 1 1.414 0A5 5 0 0 1 17 12c0 1.38-.56 2.632-1.464 3.535a1 1 0 1 1-1.415-1.414 3 3 0 0 0 .88-2.121c0-.829-.335-1.578-.88-2.122a1 1 0 0 1 0-1.414"
          />
          <path
            d="M18.364 5.636A1 1 0 1 0 16.95 7.05 6.98 6.98 0 0 1 19 12a6.98 6.98 0 0 1-2.05 4.95 1 1 0 0 0 1.414 1.414A8.98 8.98 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364"
          />
        </svg>
        <input
          aria-label="Volume"
          aria-valuetext="80%"
          class="SeekBar-module_seekBar VolumeSlider-module_slider"
          max="100"
          min="0"
          step="1"
          style="--fillTo: 0.8;"
          type="range"
          value="80"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AudioPlayerView > renders the audio player without size 1`] = `
<div>
  <div
    aria-label="Audio player"
    class="mx_MediaBody MediaBody-module_mediaBody AudioPlayerView-module_audioPlayer"
    role="region"
    tabindex="0"
  >
    <div
      class="Flex-module_flex"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <button
        aria-disabled="false"
        aria-label="Play"
        aria-labelledby="react-use-id-1"
        class="_icon-button_1215g_8 PlayPauseButton-module_button"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 32px;"
        tabindex="-1"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.98 4.677 9.921 5.58c1.36.764 1.36 2.722 0 3.486l-9.92 5.58C7.647 20.073 6 19.11 6 17.58V6.42c0-1.53 1.647-2.493 2.98-1.743"
            />
          </svg>
        </div>
      </button>
      <div
        class="Flex-module_flex AudioPlayerView-module_mediaInfo"
        style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <span
          class="AudioPlayerView-module_mediaName"
          data-testid="audio-player-name"
        >
          Sample Audio
        </span>
        <div
          class="Flex-module_flex AudioPlayerView-module_byline"
          style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1-5x); --mx-flex-wrap: nowrap;"
        >
          <time
            class="mx_Clock"
            datetime="PT5M"
          >
            05:00
          </time>
        </div>
      </div>
    </div>
    <div
      class="Flex-module_flex"
      data-testid="audio-player-seek"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
    >
      <input
        aria-label="Audio seek bar"
        class="SeekBar-module_seekBar"
        max="100"
        min="0"
        step="1"
        style="--fillTo: 0.3;"
        tabindex="-1"
        type="range"
        value="30"
      />
      <time
        class="mx_Clock AudioPlayerView-module_clock"
        datetime="PT2M"
        role="timer"
      >
        02:00
      </time>
      <div
        class="VolumeSlider-module_volumeSlider"
      >
        <svg
          aria-hidden="true"
          class="VolumeSlider-module_icon"
          fill="currentColor"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 10a2 2 0 0 1 2-2h2l3.293-3.293c.63-.63 1.707-.184 1.707.707v13.172c0 .89-1.077 1.337-1.707.707L7 16H5a2 2 0 0 1-2-2zm4.828 4L10 16.172V7.828L7.828 10H5v4zm6.294-5.536a1 1 0 0 1 1.414 0A5 5 0 0 1 17 12c0 1.38-.56 2.632-1.464 3.535a1 1 0 1 1-1.415-1.414 3 3 0 0 0 .88-2.121c0-.829-.335-1.578-.88-2.122a1 1 0 0 1 0-1.414"
          />
          <path
            d="M18.364 5.636A1 1 0 1 0 16.95 7.05 6.98 6.98 0 0 1 19 12a6.98 6.98 0 0 1-2.05 4.95 1 1 0 0 0 1.414 1.414A8.98 8.98 0 0 0 21 12a8.98 8.98 0 0 0-2.636-6.364"
          />
        </svg>
        <input
          aria-label="Volume"
          aria-valuetext="80%"
          class="SeekBar-module_seekBar VolumeSlider-module_slider"
          max="100"
          min="0"
          step="1"
          style="--fillTo: 0.8;"
          type="range"
          value="80"
        />
      </div>
    </div>
  </div>
</div>
`;
